# Router-Architect

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
config/: calibration_prompts.yaml  plugins.yaml  providers.yaml  routing.yaml
specs/001-ai-model-router/: calibration-baseline.md  constitution-compliance.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-model-router/checklists/: requirements.md
specs/001-ai-model-router/contracts/: api.md
src/router/: __init__.py  api.py  cache.py  calibration.py  classifier.py  cli.py  config.py  cost.py  embeddings.py  engine.py  models.py  pipeline.py  providers.py
src/router/plugins/: __init__.py  base.py  hallucination.py  jailbreak.py  pii.py
tests/: conftest.py
tests/calibration/: test_calibration.py
tests/integration/: test_api.py  test_cache.py  test_calibration.py  test_embeddings.py  test_hallucination.py  test_pipeline.py  test_plugins.py  test_providers.py
tests/unit/: test_cache.py  test_classifier.py  test_classifier_refined.py  test_cli.py  test_config.py  test_cost.py  test_embeddings.py  test_engine.py  test_hallucination.py  test_models.py  test_plugins.py
ui-web/: .gitignore  README.md  package-lock.json  package.json  vitest.config.mts
ui-web/app/: globals.css  layout.tsx  nav-bar.tsx  page.tsx
ui-web/app/dashboard/: page.tsx
ui-web/lib/: api.ts  format.test.ts  format.ts  router-context.tsx  timeline-query.test.ts  timeline-query.ts  types.ts
